<resources>
    <string name="app_name">TheSafe</string>


    <string name="login_button_send">Go</string>
    <string name="login_field_username">Username</string>
    <string name="login_field_password">Password</string>
    <string name="login_button_password">password</string>
    <string name="login_button_fingerprint">fingerprint</string>
    <string name="login_button_cancel">Cancel</string>
    <string name="setting_field_salt">Salt</string>
    <string name="setting_field_title">Settings</string>
    <string name="setting_field_password">Password</string>
    <string name="setting_helper_salt">Used for decryption *</string>
    <string name="setting_helper_password">Used for decryption *</string>
    <string name="setting_switch_fingerprint">Use fingerprint to authenticate</string>
    <string name="setting_switch_remember">Remember the username</string>
    <string name="setting_button_save">save</string>
    <string name="setting_error_message">please, fill the fields with a *</string>
    <string name="setting_decrypterror_message">the base folder is missing</string>
    <string name="setting_decrypterror_no_file_message">no file to test, needs gif/jpg/png</string>
    <string name="fingerprint_help">too fast, try again</string>
    <string name="app_bar_menu_search">search</string>
    <string name="lock_image">lock_image</string>
    <string name="searchview_hint_text">Search…</string>
    <string name="verify_decryption_password_salt">Verify decryption password/salt *</string>
    <string name="setting_notvalidated_message">please, test the decryption</string>
    <string name="verify">VERIFY</string>
    <string name="no_result_listview">no result listview</string>
    <string name="nothing_here">Nothing here…</string>
    <string name="close_image">close image</string>
    <string name="scroll_to_top">scroll to top</string>
    <string name="play_button">play button</string>
    <string name="pause_button">pause button</string>
    <string name="quit_fullscreen">quit fullscreen</string>
    <string name="volume_button">volume button</string>
    <string name="mute_button">mute button</string>
    <string name="playback_name">Audio</string>
    <string name="the_safe">T h e S a f e</string>
    <string name="desc_fullscreen_button">fullscreen button</string>
    <string name="music_note">music_note</string>
</resources>
