<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.crmbl.thesafe.SettingViewModel" />
    </data>

    <RelativeLayout android:id="@+id/setting_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/decryp_password_field"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/mtrl_box_stroke_color"
                android:textColorHint="@color/colorHint"
                app:helperTextEnabled="true"
                app:helperText="@string/setting_helper_password"
                android:hint="@string/setting_field_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text="@={viewModel.settingPassword}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/decryp_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/mtrl_box_stroke_color"
                android:textColorHint="@color/colorHint"
                app:helperTextEnabled="true"
                app:helperText="@string/setting_helper_salt"
                android:hint="@string/setting_field_salt">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text="@={viewModel.settingSalt}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.switchmaterial.SwitchMaterial-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/setting_switch_fingerprint"/>-->

        <!--<com.google.android.material.switchmaterial.SwitchMaterial-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/setting_switch_remember"/>-->

        <LinearLayout android:id="@+id/setting_buttons_layout"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_gravity="bottom|end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/setting_button_save"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/setting_button_save"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/setting_button_cancel"
                    android:visibility="@{viewModel.firstUse ? View.GONE : View.VISIBLE}"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_cancel"/>
        </LinearLayout>
    </RelativeLayout>

</layout>


