<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rl_custom_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="#000">

    <FrameLayout android:id="@+id/layout_lock"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorBackground"
                 android:visibility="gone"
                 android:elevation="100dp"
                 android:scaleType="fitXY">
        <ImageView
                android:contentDescription="@string/lock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_hint_64dp"
                android:layout_gravity="center"/>
    </FrameLayout>

    <pl.droidsonroids.gif.GifImageView android:id="@+id/image"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:adjustViewBounds="true"
               android:layout_centerInParent="true"/>

    <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/ic_close_accent_24dp"
            android:contentDescription="@string/close_image"/>

    <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading"
            android:layout_centerInParent="true"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:SpinKit_Color="@color/colorAccent" />

    <ImageButton android:id="@+id/controller_rotate"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="0dp"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_screen_rotation_white_24dp"
                 android:contentDescription="@string/mute_button"
                 android:background="@drawable/bg_exo_circle"
                 android:elevation="5dp"
                 style="@style/ExoMediaButton.Play"/>
</RelativeLayout>