<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_custom_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="#000">

    <FrameLayout android:id="@+id/layout_lock"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorBackground"
                 android:visibility="gone"
                 android:elevation="100dp"
                 android:scaleType="fitXY">
        <ImageView
                android:contentDescription="@string/lock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_hint_64dp"
                android:layout_gravity="center"/>
    </FrameLayout>

    <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:resize_mode="fit"
            app:surface_type="texture_view"
            app:use_controller="false"/>

    <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading"
            android:layout_centerInParent="true"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:SpinKit_Color="@color/colorAccent" />

    <RelativeLayout android:id="@+id/controller_layout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
                android:id="@+id/controller_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="0dp"
                android:background="@drawable/ic_close_accent_24dp"
                android:contentDescription="@string/close_image"/>

        <FrameLayout
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton android:id="@+id/controller_play"
                         android:visibility="gone"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_gravity="center"
                         android:contentDescription="@string/play_button"
                         android:background="@drawable/bg_exo_circle"
                         android:elevation="5dp"
                         style="@style/ExoMediaButton.Play"/>

            <ImageButton android:id="@+id/controller_pause"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_gravity="center"
                         android:contentDescription="@string/pause_button"
                         android:elevation="5dp"
                         android:background="@drawable/bg_exo_circle"
                         style="@style/ExoMediaButton.Pause"/>

            <ImageButton android:id="@+id/controller_replay"
                         android:visibility="gone"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_gravity="center"
                         android:contentDescription="@string/play_button"
                         android:background="@drawable/bg_exo_circle"
                         android:elevation="5dp"
                         android:src="@drawable/exo_controls_repeat_all"
                         style="@style/ExoMediaButton.Rewind"/>
        </FrameLayout>

        <FrameLayout
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingBottom="35dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageButton android:id="@+id/controller_mute"
                         android:visibility="gone"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_volume_off_white_24dp"
                         android:contentDescription="@string/mute_button"
                         android:background="@drawable/bg_exo_circle"
                         android:elevation="5dp"
                         style="@style/ExoMediaButton.Play"/>

            <ImageButton android:id="@+id/controller_volume"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_volume_up_white_24dp"
                         android:contentDescription="@string/volume_button"
                         android:elevation="5dp"
                         android:background="@drawable/bg_exo_circle"
                         style="@style/ExoMediaButton.Pause"/>
        </FrameLayout>

        <ImageButton android:id="@+id/controller_rotate"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="90dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="0dp"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_screen_rotation_white_24dp"
                     android:contentDescription="@string/mute_button"
                     android:background="@drawable/bg_exo_circle"
                     android:elevation="5dp"
                     style="@style/ExoMediaButton.Play"/>

        <LinearLayout android:paddingBottom="1dp"
                android:background="@color/colorItemBackgroundOpacity"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.DefaultTimeBar android:id="@+id/controller_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    app:played_color="@color/colorAccent"
                    app:buffered_color="@color/colorHintOpacity"
                    app:unplayed_color="@color/colorHintOpacity"
                    android:paddingLeft="10dp"
                    android:paddingRight="8dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlHardcoded"/>

            <ImageButton android:id="@+id/controller_minimize"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginRight="8dp"
                         android:contentDescription="@string/quit_fullscreen"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_fullscreen_exit_white_24dp"
                         tools:ignore="RtlHardcoded"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>